crates/milli/src/search/new/tests/snapshots/milli__search__new__tests__words_tms__words_proximity_tms_last_simple-5.snap
---
source: milli/src/search/new/tests/words_tms.rs
expression: "format!(\"{document_scores:#?}\")"
---
[
    [
        Words(
            Words {
                matching_words: 9,
                max_matching_words: 9,
            },
        ),
        Proximity(
            Rank {
                rank: 25,
                max_rank: 25,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 9,
                max_matching_words: 9,
            },
        ),
        Proximity(
            Rank {
                rank: 24,
                max_rank: 25,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 9,
                max_matching_words: 9,
            },
        ),
        Proximity(
            Rank {
                rank: 23,
                max_rank: 25,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 9,
                max_matching_words: 9,
            },
        ),
        Proximity(
            Rank {
                rank: 22,
                max_rank: 25,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 9,
                max_matching_words: 9,
            },
        ),
        Proximity(
            Rank {
                rank: 22,
                max_rank: 25,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 9,
                max_matching_words: 9,
            },
        ),
        Proximity(
            Rank {
                rank: 22,
                max_rank: 25,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 9,
                max_matching_words: 9,
            },
        ),
        Proximity(
            Rank {
                rank: 21,
                max_rank: 25,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 9,
                max_matching_words: 9,
            },
        ),
        Proximity(
            Rank {
                rank: 21,
                max_rank: 25,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 9,
                max_matching_words: 9,
            },
        ),
        Proximity(
            Rank {
                rank: 20,
                max_rank: 25,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 9,
                max_matching_words: 9,
            },
        ),
        Proximity(
            Rank {
                rank: 18,
                max_rank: 25,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 9,
                max_matching_words: 9,
            },
        ),
        Proximity(
            Rank {
                rank: 18,
                max_rank: 25,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 9,
                max_matching_words: 9,
            },
        ),
        Proximity(
            Rank {
                rank: 1,
                max_rank: 25,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 8,
                max_matching_words: 9,
            },
        ),
        Proximity(
            Rank {
                rank: 19,
                max_rank: 22,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 7,
                max_matching_words: 9,
            },
        ),
        Proximity(
            Rank {
                rank: 16,
                max_rank: 19,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 7,
                max_matching_words: 9,
            },
        ),
        Proximity(
            Rank {
                rank: 13,
                max_rank: 19,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 5,
                max_matching_words: 9,
            },
        ),
        Proximity(
            Rank {
                rank: 10,
                max_rank: 13,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 4,
                max_matching_words: 9,
            },
        ),
        Proximity(
            Rank {
                rank: 7,
                max_rank: 10,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 4,
                max_matching_words: 9,
            },
        ),
        Proximity(
            Rank {
                rank: 7,
                max_rank: 10,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 4,
                max_matching_words: 9,
            },
        ),
        Proximity(
            Rank {
                rank: 7,
                max_rank: 10,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 3,
                max_matching_words: 9,
            },
        ),
        Proximity(
            Rank {
                rank: 5,
                max_rank: 7,
            },
        ),
    ],
]
