crates/milli/src/search/new/tests/snapshots/milli__search__new__tests__words_tms__words_tms_last_phrase-2.snap
---
source: milli/src/search/new/tests/words_tms.rs
expression: "format!(\"{document_scores:#?}\")"
---
[
    [
        Words(
            Words {
                matching_words: 9,
                max_matching_words: 9,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 9,
                max_matching_words: 9,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 9,
                max_matching_words: 9,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 8,
                max_matching_words: 9,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 7,
                max_matching_words: 9,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 7,
                max_matching_words: 9,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 5,
                max_matching_words: 9,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 4,
                max_matching_words: 9,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 4,
                max_matching_words: 9,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 4,
                max_matching_words: 9,
            },
        ),
    ],
]
